<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_login_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/onboarding_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:contentDescription="@null"
        android:src="@drawable/patungan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_text_onboarding"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.Udacity.Button.Login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/lv_header_text_size"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_login"
        android:onClick="onLoginClick"
        android:text="@string/label_button_login"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:drawableEnd="@drawable/mandiriecash"
        android:drawablePadding="20dp"
        android:drawableRight="@drawable/mandiriecash"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/label_powered_by"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

</FrameLayout>